# saucer

./: Cargo.toml  LICENSE  README.md
docs/: README.md
docs/architecture/: cmd.md  effect-managers.md  observability.md  ports.md
saucer-core/: Cargo.toml
saucer-core-macros/: Cargo.toml
saucer-core-macros/src/: lib.rs
saucer-core/src/: build.rs  cmd.rs  lib.rs  observation.rs  observer.rs  ports_plumbing.rs  reconciler.rs  request.rs  router.rs  sender.rs
saucer-core/tests/: mock_app_runtime.rs  mock_port_http_runtime.rs  mock_port_runtime.rs  mock_wrapper_runtime.rs
saucer-core/tests/mock_app/: Cargo.toml
saucer-core/tests/mock_app/src/: app.tea.rs  lib.rs
saucer-core/tests/mock_http_manager/: Cargo.toml
saucer-core/tests/mock_http_manager/src/: command.rs  lib.rs  requests.rs
saucer-core/tests/mock_port_app/: Cargo.toml  generated.rs
saucer-core/tests/mock_port_app/src/: app.tea.rs  lib.rs
saucer-core/tests/mock_port_http_app/: Cargo.toml
saucer-core/tests/mock_port_http_app/src/: app.tea.rs  lib.rs
saucer-core/tests/mock_time_manager/: Cargo.toml
saucer-core/tests/mock_time_manager/src/: command.rs  lib.rs  requests.rs
saucer-core/tests/mock_widget/: Cargo.toml
saucer-core/tests/mock_widget/src/: lib.rs  widget.tea.rs
saucer-core/tests/mock_wrapper_app/: Cargo.toml  build.rs
saucer-core/tests/mock_wrapper_app/src/: lib.rs  wrapper.tea.rs
saucer-http-manager/: Cargo.toml
saucer-http-manager/src/: command.rs  lib.rs  requests.rs
saucer-time-manager/: Cargo.toml
saucer-time-manager/src/: command.rs  lib.rs  requests.rs
saucer-time-manager/tests/: timers.rs
src/: lib.rs
