[package]
name = "saucer"
version = "0.0.2"
edition = "2021"
authors = ["Scott Robertson <scott@robertson.dev>"]
license = "MIT"
description = "Saucer - A Rust framework implementing The Elm Architecture (TEA) - coming soon"
repository = "https://github.com/srobertson/saucer"
keywords = ["tea", "framework", "placeholder"]
categories = ["development-tools"]

[workspace]

[dependencies]
