[package]
name = "saucer-time-manager"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Time effect manager for saucer-core"
publish = false

[package.metadata.saucer]
effect_manager = true
request_type = "TimeRequest"
manager_type = "TimeManager"
self_msg_type = "()"

[dependencies]
saucer-core = { path = "../saucer-core" }
tokio = { version = "1", features = ["time", "rt", "macros", "test-util"] }

[features]
default = []
