[package]
name = "mock-app"
version = "0.1.0"
edition = "2021"
publish = false
exclude = ["src/*.tea.rs"]

[package.metadata.saucer]
has_templates = true

[dependencies]
saucer-core = { path = "../.." }
mock-http-manager = { path = "../mock_http_manager" }
mock-time-manager = { path = "../mock_time_manager" }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
tokio = { version = "1", features = ["rt", "time", "macros"] }

[build-dependencies]
saucer-core = { path = "../..", features = ["build"] }
