[package]
name = "mock-port-app"
version = "0.1.0"
edition = "2021"
publish = false
exclude = ["src/*.tea.rs"]

[package.metadata.saucer]
has_templates = true

[dependencies]
saucer-core = { path = "../.." }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt", "sync", "time"] }

[build-dependencies]
saucer-core = { path = "../..", features = ["build"] }
