[package]
name = "mock-time-manager"
version = "0.1.0"
edition = "2021"

[package.metadata.saucer]
effect_manager = true
request_type = "TimeRequest"
manager_type = "TimeManager"
self_msg_type = "()"

[dependencies]
serde = { version = "1", features = ["derive"] }
saucer-core = { path = "../.." }
saucer-time-manager = { path = "../../../saucer-time-manager" }
