[package]
name = "mock-wrapper-app"
version = "0.1.0"
edition = "2021"
exclude = ["src/*.tea.rs"]

[package.metadata.saucer]
has_templates = true

[dependencies]
saucer-core = { path = "../.." }
mock-app = { path = "../mock_app" }
mock-time-manager = { path = "../mock_time_manager" }
mock-http-manager = { path = "../mock_http_manager" }
mock-widget = { path = "../mock_widget" }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
chrono = "0.4"

[build-dependencies]
saucer-core = { path = "../..", features = ["build"] }
